More extending cards documentation and minor alignment fixes

--- a/src/scss/_extending-cards.scss
+++ b/src/scss/_extending-cards.scss
@@ -10,46 +10,6 @@
 	margin-top: 0.25em;
 }
 
-.uxgl-pin1 {
-	a {
-		color: #AAA;
-		display: inline-block;
-		font-size: 12px;
-		font-weight: 300;
-		padding: 2px;
-	}
-
-	.card-footer {
-		padding-bottom: 10px;
-		padding-top: 10px;
-	}
-
-	.description {
-		margin-top: 10px;
-	}
-
-	.links {
-		margin-bottom: 10px;
-	}
-}
-
-.uxgl-pin2 {
-	.figcaption-bottom {
-		font-family: "Courier New" monospace;
-		font-size: 21px;
-	}
-}
-
-.uxgl-pin3 {
-	.figcaption-top {
-		background-color: transparent;
-		font-family: "Courier New" monospace;
-		font-size: 21px;
-		font-weight: 300;
-		letter-spacing: 0.5px;
-	}
-}
-
 .extend-cards-page {
 	.card {
 		max-width: 300px;
@@ -66,10 +26,6 @@
 		margin-left: 10px;
 		padding: 2px 10px;
 		text-transform: uppercase;
-	}
-
-	.card-footer:hover {
-		background-color: #F8F8F8;
 	}
 
 	.card-section table {
@@ -109,16 +65,16 @@
 		}
 	}
 
-	.share-buttons {
-		a {
-			color: rgba(43, 66, 89, 0.9);
-			display: block;
-			padding: 20px 0;
+	// .share-buttons {
+	// 	a {
+	// 		color: rgba(43, 66, 89, 0.9);
+	// 		display: block;
+	// 		padding: 20px 0;
 
-			&:focus, &:hover {
-				background-color: #EEE;
-				text-decoration: none;
-			}
-		}
-	}
+	// 		&:focus, &:hover {
+	// 			background-color: #EEE;
+	// 			text-decoration: none;
+	// 		}
+	// 	}
+	// }
 }
